--- a/datasette.yaml
+++ b/datasette.yaml
@@ -33,3 +33,6 @@ databases:
 extra_css_urls:
   - /static/styles.css
   - /switchboard/static/styles.css
+extra_js_urls:
+  - /static/fix-links.js
+  - /switchboard/static/fix-links.js
