Update records in SQLite via SQL instead of re-creating the database/file
This moves the update from the filesystem layer into the SQL layer, thus
allowing multiple processes to coordinate.  Datasette holds open SQLite
connections and was keeping references to the deleted files.

The new --truncate option to `sqlite-utils insert` is added in
sqlite-utils 2.11, from a PR I submitted.¹

Resolves #10.

¹ https://github.com/simonw/sqlite-utils/pull/118

--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 id3c = {git = "https://github.com/seattleflu/id3c"}
 datasette = ">=0.41"
-sqlite-utils = "*"
+sqlite-utils = ">=2.11"
 
 [requires]
 python_version = "3.6"
