Add Husky Coronavirus Testing
Add records from the Husky Coronavirus Testing Redcap project.

Currently, the dialer links to the record where a given barcode exists.
Given that Husky Coronavirus Testing is longitudinal, and there could be
multiple barcodes/testing events in a given record, it may be useful to
eventually link directly into the PCDEQC instrument for the barcode, rather
than the record page.

Update the README accordingly.

--- a/datasette.yaml
+++ b/datasette.yaml
@@ -17,7 +17,9 @@ databases:
             pre_scan_barcode,
             utm_tube_barcode_2,
             reenter_barcode,
-            return_utm_barcode
+            return_utm_barcode,
+            collect_barcode_kiosk,
+            barcode_swabsend
           from
             record_barcodes
           where
@@ -25,7 +27,9 @@ databases:
               pre_scan_barcode,
               utm_tube_barcode_2,
               reenter_barcode,
-              return_utm_barcode
+              return_utm_barcode,
+              collect_barcode_kiosk,
+              barcode_swabsend
             )
           order by
             project_id,
