Add Childcare Study
Add records from the Childcare study redcap project.

--- a/datasette.yaml
+++ b/datasette.yaml
@@ -19,7 +19,28 @@ databases:
             reenter_barcode,
             return_utm_barcode,
             collect_barcode_kiosk,
-            barcode_swabsend
+            barcode_swabsend,
+            utm_tube_barcode,
+            barcode_1,
+            barcode_2,
+            barcode_3,
+            barcode_4,
+            barcode_5,
+            barcode_6,
+            barcode_7,
+            barcode_8,
+            barcode_9,
+            barcode_10,
+            barcode_11,
+            barcode_12,
+            barcode_13,
+            barcode_14,
+            barcode_15,
+            barcode_16,
+            barcode_optional_1,
+            barcode_optional_2,
+            barcode_optional_3,
+            barcode_optional_4
           from
             record_barcodes
           where
@@ -29,7 +50,28 @@ databases:
               reenter_barcode,
               return_utm_barcode,
               collect_barcode_kiosk,
-              barcode_swabsend
+              barcode_swabsend,
+              utm_tube_barcode,
+              barcode_1,
+              barcode_2,
+              barcode_3,
+              barcode_4,
+              barcode_5,
+              barcode_6,
+              barcode_7,
+              barcode_8,
+              barcode_9,
+              barcode_10,
+              barcode_11,
+              barcode_12,
+              barcode_13,
+              barcode_14,
+              barcode_15,
+              barcode_16,
+              barcode_optional_1,
+              barcode_optional_2,
+              barcode_optional_3,
+              barcode_optional_4
             )
           order by
             project_id,
