Add two extra barcode fields from the Childcare 2021 project

--- a/datasette.yaml
+++ b/datasette.yaml
@@ -59,6 +59,8 @@ databases:
             barcode_optional_2,
             barcode_optional_3,
             barcode_optional_4,
+            barcode_ex1,
+            barcode_ex2,
             core_collection_barcode,
             return_collection_barcode,
             welcome_barcode_1,
@@ -123,6 +125,8 @@ databases:
               barcode_optional_2,
               barcode_optional_3,
               barcode_optional_4,
+              barcode_ex1,
+              barcode_ex2,
               core_collection_barcode,
               return_collection_barcode,
               welcome_barcode_1,
