Fix requirements.txt to not break on idna-ssl

--- a/requirements.txt
+++ b/requirements.txt
@@ -123,6 +123,9 @@ colorama==0.4.4 \
     --hash=sha256:5941b2b48a20143d2267e95b1c2a7603ce057ee39fd88e7329b0c292aa16869b \
     --hash=sha256:9f47eda37229f68eee03b24b9748937c7dc3868f906e8ba69fbcbdd3bc5dc3e2
     # via id3c
+contextvars==2.4 \
+    --hash=sha256:f38c908aaa59c14335eeea12abea5f443646216c4e29380d7bf34d2018e2c39e
+    # via sniffio
 datasette==0.55 \
     --hash=sha256:524c2efd20d3ed1a033e8b347f7462adbe3e8ebf0c1b1750df61ed27c717a4c4 \
     --hash=sha256:f7196e2ac672b4852e21a32b575aa81652dabce6bfc9fd52d410dd5740b87011
@@ -218,9 +221,52 @@ idna==2.10 \
     --hash=sha256:b307872f855b18632ce0c21c5e45be78c0ea7ae4c15c828c20788b26921eb3f6 \
     --hash=sha256:b97d804b1e9b523befed77c48dacec60e6dcb0b5391d57af6a65a312a90648c0
     # via
+    #   idna-ssl
     #   requests
     #   rfc3986
     #   yarl
+idna-ssl==1.1.0 \
+    --hash=sha256:a933e3bb13da54383f9e8f35dc4f9cb9eb9b3b78c6b36f311254d6d0d92c6c7c
+    # via aiohttp
+immutables==0.16 \
+    --hash=sha256:0020aaa4010b136056c20a46ce53204e1407a9e4464246cb2cf95b90808d9161 \
+    --hash=sha256:064001638ab5d36f6aa05b6101446f4a5793fb71e522bc81b8fc65a1894266ff \
+    --hash=sha256:0a396314b9024fa55bf83a27813fd76cf9f27dce51f53b0f19b51de035146251 \
+    --hash=sha256:19bdede174847c2ef1292df0f23868ab3918b560febb09fcac6eec621bd4812b \
+    --hash=sha256:1de393f1b188740ca7b38f946f2bbc7edf3910d2048f03bbb8d01f17a038d67c \
+    --hash=sha256:2505d93395d3f8ae4223e21465994c3bc6952015a38dc4f03cb3e07a2b8d8325 \
+    --hash=sha256:298a301f85f307b4c056a0825eb30f060e64d73605e783289f3df37dd762bab8 \
+    --hash=sha256:29c9ed003eacb92e630ef200e31f47236c2139b39476894f7963b32bd39bafa3 \
+    --hash=sha256:4a2a71678348fb95b13ca108d447f559a754c41b47bd1e7e4fb23974e735682d \
+    --hash=sha256:50793a44ba0d228ed8cad4d0925e00dfd62ea32f44ddee8854f8066447272d05 \
+    --hash=sha256:511c93d8b1bbbf103ff3f1f120c5a68a9866ce03dea6ac406537f93ca9b19139 \
+    --hash=sha256:734c269e82e5f307fb6e17945953b67659d1731e65309787b8f7ba267d1468f2 \
+    --hash=sha256:798b095381eb42cf40db6876339e7bed84093e5868018a9e73d8e1f7ab4bb21e \
+    --hash=sha256:799621dcdcdcbb2516546a40123b87bf88de75fe7459f7bd8144f079ace6ec3e \
+    --hash=sha256:7a58825ff2254e2612c5a932174398a4ea8fbddd8a64a02c880cc32ee28b8820 \
+    --hash=sha256:7bcf52aeb983bd803b7c6106eae1b2d9a0c7ab1241bc6b45e2174ba2b7283031 \
+    --hash=sha256:9ccf4c0e3e2e3237012b516c74c49de8872ccdf9129739f7a0b9d7444a8c4862 \
+    --hash=sha256:a307eb0984eb43e815dcacea3ac50c11d00a936ecf694c46991cd5a23bcb0ec0 \
+    --hash=sha256:a454d5d3fee4b7cc627345791eb2ca4b27fa3bbb062ccf362ecaaa51679a07ed \
+    --hash=sha256:aa7bf572ae1e006104c584be70dc634849cf0dc62f42f4ee194774f97e7fd17d \
+    --hash=sha256:acbfa79d44228d96296279068441f980dc63dbed52522d9227ff9f4d96c6627e \
+    --hash=sha256:b651b61c1af6cda2ee201450f2ffe048a5959bc88e43e6c312f4c93e69c9e929 \
+    --hash=sha256:b779617f5b94486bfd0f22162cd72eb5f2beb0214a14b75fdafb7b2c908ed0cb \
+    --hash=sha256:d59beef203a3765db72b1d0943547425c8318ecf7d64c451fd1e130b653c2fbb \
+    --hash=sha256:d67e86859598eed0d926562da33325dac7767b7b1eff84e232c22abea19f4360 \
+    --hash=sha256:edd9f67671555af1eb99ad3c7550238487dd7ac0ac5205b40204ed61c9a922ac \
+    --hash=sha256:fcf678a3074613119385a02a07c469ec5130559f5ea843c85a0840c80b5b71c6
+    # via contextvars
+importlib-metadata==4.8.1 \
+    --hash=sha256:b618b6d2d5ffa2f16add5697cf57a46c76a56229b0ed1c438322e4e95645bd15 \
+    --hash=sha256:f284b3e11256ad1e5d03ab86bb2ccd6f5339688ff17a4d797a0fe7df326f23b1
+    # via
+    #   pint
+    #   pluggy
+importlib-resources==5.3.0 \
+    --hash=sha256:7a65eb0d8ee98eedab76e6deb51195c67f8e575959f6356a6e15fd7e1148f2a3 \
+    --hash=sha256:f2e58e721b505a79abe67f5868d99f8886aec8594c962c7490d0c22925f518da
+    # via pint
 isodate==0.6.0 \
     --hash=sha256:2e364a3d5759479cdb2d37cce6b9376ea504db2ff90252a2e5b7cc89cc9ff2d8 \
     --hash=sha256:aa4d33c06640f5352aca96e4b81afd8ab3b47337cc12089822d6f322ac772c81
@@ -558,6 +604,10 @@ typing-extensions==3.7.4.3 \
     #   aiohttp
     #   aioitertools
     #   id3c
+    #   immutables
+    #   importlib-metadata
+    #   uvicorn
+    #   yarl
 uritemplate==3.0.1 \
     --hash=sha256:07620c3f3f8eed1f12600845892b0e036a2420acf513c53f7de0abd911a5894f \
     --hash=sha256:5af8ad10cec94f215e3f48112de2022e1d5a37ed427fbd88652fa908f2ab7cae
@@ -622,6 +672,12 @@ yarl==1.6.3 \
     --hash=sha256:f0b059678fd549c66b89bed03efcabb009075bd131c248ecdf087bdb6faba24a \
     --hash=sha256:fcbb48a93e8699eae920f8d92f7160c03567b421bc17362a9ffbbd706a816f71
     # via aiohttp
+zipp==3.6.0 \
+    --hash=sha256:71c644c5369f4a6e07636f0aa966270449561fcea2e3d6747b8d23efaa9d7832 \
+    --hash=sha256:9fe5ea21568a0a70e50f273397638d39b03353731e6cbbb3fd8502a33fec40bc
+    # via
+    #   importlib-metadata
+    #   importlib-resources
 
 # WARNING: The following packages were not pinned, but pip requires them to be
 # pinned when the requirements file includes hashes. Consider using the --allow-unsafe flag.
