--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,10 @@ asgiref==3.3.1 \
     --hash=sha256:5ee950735509d04eb673bd7f7120f8fa1c9e2df495394992c73234d526907e17 \
     --hash=sha256:7162a3cb30ab0609f1a4c95938fd73e8604f63bdba516a7f7d64b83ff09478f0
     # via datasette
+async-generator==1.10 \
+    --hash=sha256:01c7bf666359b4967d2cda0000cc2e4af16a0ae098cbffcb8472fb9e8ad6585b \
+    --hash=sha256:6ebb3d106c12920aaae42ccb6f787ef5eefdcdd166ea3d628fa8476abe712144
+    # via httpx
 async-timeout==3.0.1 \
     --hash=sha256:0c3c816a028d47f659d6ff5c745cb2acf1f966da1fe5c19c77a70282b25f4c5f \
     --hash=sha256:4291ca197d287d274d0b6cb5d6f8f8f82d434ed288f962539ff18cc9012f9ea3
@@ -131,6 +135,13 @@ colorama==0.4.4 \
     --hash=sha256:5941b2b48a20143d2267e95b1c2a7603ce057ee39fd88e7329b0c292aa16869b \
     --hash=sha256:9f47eda37229f68eee03b24b9748937c7dc3868f906e8ba69fbcbdd3bc5dc3e2
     # via id3c
+contextvars==2.4 \
+    --hash=sha256:f38c908aaa59c14335eeea12abea5f443646216c4e29380d7bf34d2018e2c39e
+    # via sniffio
+dataclasses==0.8 \
+    --hash=sha256:0201d89fa866f68c8ebd9d08ee6ff50c0b255f8ec63a71c16fda7af82bb887bf \
+    --hash=sha256:8479067f342acf957dc82ec415d355ab5edb7e7646b90dc6e2fd1d96ad084c97
+    # via anyio
 datasette==0.56.1 \
     --hash=sha256:9785247eb05a5cc7ff65928cfc07e02ce62405fd278ab3d61796bffdf0074086 \
     --hash=sha256:9cb0b2ff6f512de559ff2ba1ab369f499d921763c8e9cf6d0affb6143d0bb16a
@@ -620,6 +631,7 @@ typing-extensions==3.7.4.3 \
     # via
     #   aiohttp
     #   aioitertools
+    #   anyio
     #   id3c
     #   immutables
     #   importlib-metadata
